# Pingu

./: .clang-format  .gitignore  CMakeLists.txt  Chess_3.cbp  Chess_3.depend  Chess_3.layout  LICENSE  Makefile  README.md  apply.c  apply.h  argsfile.c  changes.html  decode.c  defs.h  end.c  end.h  gmon.out  grammar.h  hashing.c  hashing.h  help.html  lex.c  lex.h  lines.c  lines.h  lists.c  lists.h  main.cpp  map.c  map.h  moves.h  output.h  pgn-extract.man  pgn-extract.xml  process-time-pgn.cpp  profiling  requirements.txt  taglines.c  taglines.h  (+1 more)
.github/workflows/: create_test.yaml  lint_pr.yaml  master.yml  master_dev_build.yml  master_dev_release.yml  master_release.yml  pr_checks.yml  pr_lint.yml  test_pr.yaml  validate_pr.yaml  validate_pr_details.yaml
docs/: _config.yml  evaluation_tuning.md  features_overview.md  index.md  nnue.md  nnue_2.md  nnue_3.md  search.md  user_guide.md
include/: activations.h  bench.h  bitboard.h  board.h  cnn.h  constants.h  countermove.h  endgames.h  engine-commands.h  evaluation.h  format.h  game.h  gensfen.h  history.h  killer.h  king.h  knight.h  linear.h  magic.h  material-counter.h  movegen.h  movepicker.h  nnue.h  node.h  pawn.h  perft.h  process-time-pgn.h  search.h  see.h  simd.h  slider.h  test-suite.h  testing.h  thread.h  time-network.h  transposition.h  tuning.h  uci.h  util.h  validate.h  (+1 more)
nnue/: Makefile  dataloader.cpp  dataloader.py  download.py  export_model.py  main.cpp  parse_data.py  run.bat  run.py  split_data.py  test.py  train.py  utils.py
nnue/dataset/: Makefile  download.py  generate_data.py  gensfen.py  parse.cpp  repo.py  unpack.py
nnue/include/: utils.h
nnue/model/: Makefile  checkpoint.py  config.py  dataloader.cpp  dataloader.py  export.py  model.py  model_test.py  test.py  train.py  utils.py
nnue/train/: nnue_trainer.py
pipeline/: checkpoint.py  dataloader.cpp  dataloader.h  dataloader.py  dataparser.h  export.py  parse.cpp  train.py  utils.h
testing/: bench_check.py  bench_value.txt  engine.py  fen_check.py  incremental_check.py  move_validation_check.py  nodes_per_second.py  nps_positions.txt  perft.py  perftSuite.txt  perft_check.py  perft_positions.txt  run_tests.bat  see_check.py  see_positions.txt  zobrist_check.py
time/: dataloader.py  download.py  model.py  parse.py  preprocess.py  process.py  time.py  train.py  upload.py  upload_raw.py
tuning/: _nnue_bias_(1,).txt  _nnue_bias_(256,).txt  _nnue_bias_(32,).txt  _nnue_weight_(1,32).txt  _nnue_weight_(32,256).txt  export_model.py  generate_data.py  model_test.py  nnue_trainer.py  parse_data.py  saved_model.pth  split_data.py  utils.py  weights.txt
weights/: setup.py
(+27 files in other folders)
